--- a/style/style.css
+++ b/style/style.css
@@ -47,3 +47,142 @@
     font-weight: 400;
     line-height: normal;
 }
+
+/* Gallery */
+.team{
+    display: grid;    
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 50px;
+    column-gap: 0;
+}
+
+.team img{
+    width: 237px;
+    height: 341px;
+}
+
+.div1{
+    position: relative;
+    width: 320px;
+}
+
+.title{
+    transform: rotate(-270deg);
+    position: absolute;
+    top: 45px;  
+    left: 210px; 
+    color: #000;
+    font-family: PT Serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+}
+.div2{
+    position: relative;
+    margin: 100px 0;
+}
+.about2 p{
+    transform: rotate(-270deg);
+    position: absolute;
+    top: 35px;
+    left: 220px;
+    color: #000;
+    font-family: PT Serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+.name{
+    color: #000;
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-top: 10px;
+}
+
+.div3{
+    position: relative;
+}
+
+.about3 p{
+    transform: rotate(90deg);   
+    position: absolute;
+    top: 35px;
+    left: 220px;
+    color: #000;
+    font-family: PT Serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+.div4{
+    position: relative;
+}
+
+.about4 p{
+    transform: rotate(90deg);   
+    position: absolute;
+    top: 35px;
+    left: 220px;
+    color: #000;
+    font-family: PT Serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+}
+.div5{
+    position: relative;
+    margin: 100px 0;
+}
+
+.about5 p{
+    transform: rotate(90deg);   
+    position: absolute;
+    top: 35px;
+    left: 220px;
+    color: #000;
+    font-family: PT Serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+}
+.div6{
+    position: relative;
+}
+
+.about6 p{
+    transform: rotate(90deg);   
+    position: absolute;
+    top: 35px;
+    left: 220px;
+    color: #000;
+    font-family: PT Serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+@media screen and (max-width: 576px) {
+    .team{
+        display: grid;    
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 50px;
+        column-gap: 0;
+    }
+}
